syntax = "proto3";

package proto;

option java_multiple_files = true;

import "laptop_message.proto";

message StoreLaptopRequest {
  Laptop laptop = 1;
}

message StoreLaptopResponse {
  string id = 1;
}

message Empty { }

service LaptopService {
  // Unary RPC
  rpc StoreLaptop(StoreLaptopRequest) returns (StoreLaptopResponse);

  // Server streaming RPC
  rpc GetAllLaptops(Empty) returns (stream StoreLaptopResponse);

  // Client streaming RPC
  rpc StoreLaptops(stream StoreLaptopRequest) returns (StoreLaptopResponse);

  // Bidirectional streaming RPC
  rpc StoreLaptopsContinuously(stream StoreLaptopRequest) returns (stream StoreLaptopResponse);
}
